lab1/Test/L1-A-11-19.cmm
int ( ) {
}
float ;
struct py1R PqiFcE5Rwc4Pwf 
;
int ;
struct ODp ;
int CNbV88nTI6Dm ( int b7wr ) {
  int MMjHpyBHRxqN3VrKbr ;
  int KpLh5B7KbhJbGH ;
  while ( AN3NASPa ) {
    if ( RqM )     sCaF ;
else {
    }
    SZ_nPN_dSsmXDjZC ;
    a0zNhhjr ;] 
    sO3pf ;
    if ( we3k5SPf     while ( ksbUQYR_fLEZil5TKgAB 
      )     if ( JL )     if ( JonfNCdm1nx_ )     if ( stpcAx 
      )     y ;
else     GDIQosyzuWQ ;

else     msJY ;

else     taCe1z_e6x1yU ;


else     dDkWf7u3vSr7uz ;

    j_EI ;
  }
  while ( tmlA ) {
    struct ew EnBQKDJrFM4GqNH ;
{
    }  }
  if ( rSiLn0vnmh6Wf )   while ( rbhqYzfbOJwWEe ) 
    {
    if ( qigEVdgg )     if ( uK4dF6KvX     if ( EpEANFJEy9M2H 
      ) {
    }


    if ( erLE9tOmP31NOCgbH )     SJHrWtFkp ;
else     e6P3sh ;

    if ( xyCwpBHX )     if ( iX1otjHe )     while 
      ( J6LK9jo )     if ( ij5MvKz )     while ( oErFpr2 
      ) {
    }
else     while ( W6l37X4u4MKB )     while ( EkfEMygK 
      )     QkXEOP6R_4MpX0orn48 ;




else     bF2DZJW ;


  }
else   if ( _kD1uhN4xnLYFrd7IzJe )   return Nj8Ird5B4ZqdEQIro8VY 
    ;


}
int ;
struct {
  int RM0DARkslokXMEFeZW , hD4fOERJdpKEjQKif7 , pa86pFMsTnR9Iin 
    ;
  int c_mtJeNsbQxNUMkBfG [ 1268783260 ] = GHSEy0mp37kY 
    = wPqalLwpdNI9CUmDB5_ || AcA1U7HaU5fOcrVEh != UNXAntfCQP1LN6 
    * - ( a && iJvsZpdd < qAgro + hGiMg9Hmt0yWOu7ZgqE 
    ( dDY6lkYvSatFKOjgN2LS , dfvZT88Nyo && > vjBv_ - - 
    VoU [ DHO6lINbzHAN2c || TLq7Mnj1MgdXsm == bnOPIalCkw2 
    + ( MK1lC = otqmKavQVrVk = reKcwtpqh7VOgq ) <= 2099971013.920881343 
    >= aN4h2c4uS4IJMp_mgiVe + 946190367 ] ) / ! - ! ! 
    cke ( ) . j5NBtBuNAW_ZgbYB5g ) ;
};
int ;
struct nl5lb8ib EURU4T1w3VXkXADUDdu ( int DLaaHgp4Ep 
  , int h_Lku7s8A1OLXkl6K ) {
  int Kwd3ifxLJYZYI ;
  int aCMGUZIeDVgbduSiYz ;
  TifxGX ;
}
struct kemd4LKDHTnIdxORN ;
int ;
int ;
int ;
int qZ2bB9k2B7DIRLw ( ) {
  if mYNhWh_enWHkwGlOLl )   while ( KFEgB )   v0VPL 
    ;


}
int ;
struct MxO8 ;
struct OVGUo2s8VJPjFViz {
};
struct pNxweOqP ;
int ;
int ;
int U0 , AXfG2MI8if 

;
